--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="styles.css">
-    <title>Random Quotes</title>
-</head>
-<body>
-    <h1>Random Quotes</h1>
-    <p>Quote</p>
-</body>
-<footer>
-    <p>Made by: Goh Guang Wei</p>
-</footer>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+        <link rel="stylesheet" href="styles.css">
+        <script src="function.js"></script>
+        <title>Random Quotes</title>
+    </head>
+    <body>
+        <div class="topbar">
+            <div class="logo">
+                <img src="/logo/google-gmail.svg" alt="email-logo">
+                <img src="/logo/github-icon.svg" alt="github-logo">
+                <img src="/logo/instagram-icon.svg" alt="instagram-logo">
+                <input type="image" src="logo/reset-svgrepo-com.svg" id="reset" onclick="replaceQuote()"/>
+            </div>
+        </div>
+        <div class="quote">
+            <p id="quotes">Test</p>
+            <p id="name">- Name</p>
+        </div>
+
+    </body>
+    <footer>
+        <p>&copy; Goh Guang Wei</p>
+    </footer>
 </html>
