Updated images to use PNG for easier editing

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <div class="topbar">
             <div class="logo">
-                <img src="/logo/google-gmail.svg" alt="email-logo">
-                <img src="/logo/github-icon.svg" alt="github-logo">
-                <img src="/logo/instagram-icon.svg" alt="instagram-logo">
-                <input type="image" src="logo/reset-svgrepo-com.svg" id="reset" onclick="replaceQuote()"/>
+                <img src="/logo/gmail_logo.png" alt="email-logo">
+                <img src="/logo/github_logo.png" alt="github-logo">
+                <img src="/logo/insta_logo.png" alt="instagram-logo">
+                <input type="image" src="/logo/reload_logo.png" id="reset" onclick="replaceQuote()"/>
             </div>
         </div>
         <div class="quote">
