Pressing refresh button would randomize the quotes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="quote">
-            <p id="quotes">Test</p>
+            <p id="quotes">Testing here</p>
             <p id="name">- Name</p>
         </div>
 
