Quote size adjustment

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
         </div>
         <div class="quote">
-            <p id="quotes">Testing here</p>
-            <p id="name">- Name</p>
+            <p id="quotes"></p>
+            <p id="name"></p>
         </div>
 
     </body>
