--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -15,7 +16,11 @@
                 <input type="image" src="/logo/reload_logo.png" id="reset" onclick="replaceQuote()"/>
             </div>
         </div>
-        <div class="quote">
+        <div class="quote-select">
+            <button type="button">Click Me</button>
+            <button type="button">Click Me</button>
+        </div>
+        <div class="moti-quote">
             <p id="quotes"></p>
             <p id="name"></p>
         </div>
