Fixing images that don't appear on GitHub Pages #2

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <div class="topbar">
             <div class="logo">
-                <a href= "https://github.com/GohGuangWei/RandomQuotes" target="_blank"><img src="./logo/github_logo.png" alt="github-logo"></a>
-                <a href= "https://www.instagram.com/diamond4luck/" target="_blank"><img src="./logo/insta_logo.png" alt="instagram-logo"></a>
-                <input type="image" src="/logo/reload_logo.png" id="reset" onclick="replaceQuote()"/>
+                <a href= "https://github.com/GohGuangWei/RandomQuotes" target="_blank"><img src="logo/github_logo.png" alt="github-logo"></a>
+                <a href= "https://www.instagram.com/diamond4luck/" target="_blank"><img src="logo/insta_logo.png" alt="instagram-logo"></a>
+                <input type="image" src="logo/reload_logo.png" id="reset" onclick="replaceQuote()"/>
             </div>
         </div>
         <div class="quote">
